remove register response to only send generic message for duplicate email address registration
